# nin8

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
patches/: 0001-juce-webview-skip-host-availability-check.patch
scripts/: build-ui.sh  gen-rhythm-rom.mjs
src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
src/bridge/: HostEnvSanitizer.h  WebViewBridge.cpp  WebViewBridge.h
src/engine/: FMPatch.h  OpnaChip.h  Params.h  RegisterWriteQueue.h  Resampler.h  Synth.h  VoiceAllocator.h  WaveformTap.h
tools/: render_test.cpp
